Fix background images on mobile

--- a/style.less
+++ b/style.less
@@ -317,7 +317,6 @@ body {
 #meth-cook {
 	font-family: "HeartBreakingBad";
 	background: url("meth-cook-background.jpg") no-repeat;
-	background-size: 100% auto;
 	overflow: hidden;
 
 	#name {
@@ -364,7 +363,6 @@ body {
 #homeless {
 	font-family: "MostWazted";
 	background: url("homeless-background.jpg") no-repeat;
-	background-size: 100% auto;
 	overflow: hidden;
 
 	#name {
@@ -385,7 +383,14 @@ body {
 	}
 }
 
-@media only screen and (max-width: 640px) {
+@media screen and (max-height: 450px) and (orientation: portrait) {
+	#meth-cook,
+	#homeless {
+		background-size: 100% auto;
+	}
+}
+
+@media screen and (max-height: 450px) and (orientation: landscape) {
 	#meth-cook,
 	#homeless {
 		background-size: auto 100%;
